# blowtorch

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: blowtorch-ci.yml
blowtorch/: export_weights.py  generate_models.py
blowtorch/templates/: export_weights.py.jinja2  models_template.py.jinja2  models_template.rs.jinja2
docs/: Makefile  cli_reference.rst  conf.py  index.rst  install.rst  model_reference.rst  new_layers.rst  requirements.txt  tutorial.rst
docs/mnist_example/: .-  Cargo.toml
docs/mnist_example/src/: main.rs  models.rs
docs/references/: index.rst
examples/mnist/: Cargo.toml  mnist.json  pyproject.toml  train.py
examples/mnist/examples/: example_4.npy  example_5.npy
examples/mnist/src/: main.rs
python/: README.md  pyproject.toml
python/blowtorch/: cli.py  export_weights.py  generate_models.py
python/blowtorch/layers/: __init__.py  _convolutions.py  _flatten.py  _interfaces.py  _linear.py  _parsing.py  _relu.py
python/blowtorch/schema/: model-schema.schema
python/blowtorch/templates/: models_template.py.jinja2  models_template.rs.jinja2
rust/: Cargo.toml
rust/src/: activation_functions.rs  flatten.rs  layer_implementations.rs  lib.rs  linear.rs  traits.rs  weight_loader.rs
src/blowtorch/: __main__.py  export_weights.py  generate_models.py
tests/: README.md  mnist_test.sh
tests/mnist_test/: Cargo.toml  train.py
tests/mnist_test/src/: main.rs  models.rs
