[tool.poetry]
name = "blowtorch"
version = "0.1.0"
description = "TODO"
authors = ["Conzel <38732545+Conzel@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
Jinja2 = "^3.1.1"
jsonschema = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blowtorch = "blowtorch.cli:main"
