[tool.poetry]
name = "blowtorch-py"
version = "0.1.2"
description = "A framework for creating Rust machine learning models that are trained in Python."
authors = ["Conzel <38732545+Conzel@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "blowtorch" }]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
Jinja2 = "^3.1.1"
jsonschema = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
numpy = "^1.23.1"
torchvision = "^0.13.0"
sphinx-argparse = "^0.3.1"
Sphinx = "^5.1.1"
furo = "^2022.6.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blowtorch = "blowtorch.cli:main"
