[tool.poetry]
name = "blowtorch-mnist-example"
version = "0.1.0"
description = "Example for creating an MNIST classifier for pytorch."
authors = ["Conzel <38732545+Conzel@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.0"
torchvision = "^0.13.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
